SERVER-81371 movePrimary may be retried indefinitely if it fails on clone phase and there are sharded views