src/mongo/db/s/move_primary_coordinator.cpp
@@ -686,12 +686,14 @@ void MovePrimaryCoordinator::dropOrphanedDataOnRecipient(
     // Make a copy of this container since `getNewSession` changes the coordinator document.
     const auto collectionsToClone = *_doc.getCollectionsToClone();
     for (const auto& nss : collectionsToClone) {
-        sharding_ddl_util::sendDropCollectionParticipantCommandToShards(opCtx,
-                                                                        nss,
-                                                                        {_doc.getToShardId()},
-                                                                        **executor,
-                                                                        getNewSession(opCtx),
-                                                                        false /* fromMigrate */);
+        sharding_ddl_util::sendDropCollectionParticipantCommandToShards(
+            opCtx,
+            nss,
+            {_doc.getToShardId()},
+            **executor,
+            getNewSession(opCtx),
+            false /* fromMigrate */,
+            true /* dropSystemCollections */);
     }
 }
 
